Fixed buttongroup class alignement.

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,6 @@ body
 .row
 {
     padding: 15px 0;
-
     margin: 0;
 }
 
@@ -173,7 +172,7 @@ body
 /* DESCRIPTION */
 .description
 {
-    width: 100%;
+    /* width: 100%; */
     background: #EAC761;    
     
     padding: 15px 5px;
@@ -236,29 +235,39 @@ body
     background: lightgoldenrodyellow;
 }
 
+.project
+{ 
+    padding: 0;
+    margin-bottom: 10px;
+}
+
 /* BUTTON */
 .button
 {
-    background: #91C09E;
-
-    display: block;
-    float: right;
-
     padding: 10px 10px;
-    margin: 5px 5px;
+    margin: 0 0 0 10px;
+
+    background: #91C09E;
 
     text-decoration: none;
     color: #FFF;
 
     border-radius: 2px;
     box-shadow: 2px 2px #7D7769;
+
+    display: block;
+    float: left;
 }
 
 .button:hover
 {
     background: #F75E50;
+}
 
-    text-decoration: underline;
+.button-group
+{
+    float: right;
+    padding: 0 2px 25px 0;
 }
 
 /* FONTS */
